# cryptotrader

./: .cursorignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.py  config.yaml  config.yaml.example  create_structure.bat  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  start_dash.bat
.github/workflows/: ci.yml
Database/: database.py  db.py  models.py  portfolio.py  repositories.py  repository.py  session.py
Engine/: __init__.py  balance_service.py  bootstrap.py  bot_manager.py  cycle.py  entry_decision_service.py  exit_decision_service.py  models.py  order_executor.py  pair_ranking_service.py  pair_sync_service.py  risk_limits.py  risk_manager.py  symbol_sync_service.py  sync_scheduler.py  ticker_sync_service.py  trading_agent.py  trading_cycle.py
Engine/bots/: __init__.py  aggressive_bot.py  base_bot.py  passive_bot.py  smart_bot.py
Exchange/: __init__.py  binance.py  factory.py  interface.py  mock_exchange.py  revolut.py  revolutx_api.py
Frontend/: postcss.config.cjs
Frontend/src/: api.js  chartSetup.js  store.js  styles.css  useSocket.js
Frontend/src/components/: BotsCard.jsx  ControlPanel.jsx  Dashboard.jsx  PortfolioCard.jsx  Sidebar.jsx  TradesFeed.jsx
Utils/: config_loader.py  helpers.py  logger.py
Web/ws/: state_stream.py  ws_manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
tests/: conftest.py  test_bots.py  test_cycle.py  test_decision.py  test_exchange_factory.py  test_mock_exchange.py  test_repository.py  test_risk_manager.py
web/: auth.py  main.py
web/api/: bot_control.py  portfolio.py
web/ws/: portfolio_ws.py
